--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,10 +1,4 @@
-[build]
-# target = "x86_64-snek.json"
-target = "x86_64-unknown-none"
-
-[target.'cfg(target_os = "none")']
-runner = "cargo run --package boot --target x86_64-unknown-linux-gnu --"
-
 [unstable]
-build-std = ["core", "compiler_builtins", "alloc"]
-build-std-features = ["compiler-builtins-mem"]
+#build-std = ["core", "compiler_builtins", "alloc"]
+#build-std-features = ["compiler-builtins-mem"]
+bindeps = true
