--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -8,7 +8,6 @@ edition = "2021"
 spin = "0.9"
 lazy_static = { version = "1.4", features = ["spin_no_std"] }
 linked_list_allocator = "0.10"
-pc-keyboard = "0.6"
 crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
 futures = { version = "0.3", default-features = false, features = ["alloc"] }
 futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
@@ -18,6 +17,7 @@ mycelium-bitfield = { git = "https://github.com/hawkw/mycelium.git", rev = "f173
 maitake = { git = "https://github.com/hawkw/mycelium.git", rev = "09c84f4e8171f60b1f0ab03627ba5040934dc3a7" }
 rand_xoshiro = "0.6"
 rand = { version = "0.8", default-features = false }
+i8042 = { path = "../crates/i8042" }
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 x86_64 = "0.14"
@@ -27,6 +27,7 @@ acpi = "4.1"
 os_units = "0.4"
 x2apic = "0.4"
 raw-cpuid = "10.6"
+pci_types = { path = "../../pci_types", version = "0.2" }
 
 [build-dependencies]
 image = { version = "0.24", default-features = false, features = ["png"] }
