--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [build-dependencies]
 bootloader = { git = "https://github.com/rust-osdev/bootloader" }
-snek_kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
+# snek_kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
 
 [dependencies]
 ovmf-prebuilt = "0.1.0-alpha.1"
