--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -18,6 +18,8 @@ maitake = { git = "https://github.com/hawkw/mycelium.git", rev = "09c84f4e8171f6
 rand_xoshiro = "0.6"
 rand = { version = "0.8", default-features = false }
 i8042 = { path = "../crates/i8042" }
+pci-ids = "0.2"
+pci_types = { path = "../../pci_types", version = "0.2" }
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 x86_64 = "0.14"
@@ -27,7 +29,6 @@ acpi = "4.1"
 os_units = "0.4"
 x2apic = "0.4"
 raw-cpuid = "10.6"
-pci_types = { path = "../../pci_types", version = "0.2" }
 
 [build-dependencies]
 image = { version = "0.24", default-features = false, features = ["png"] }
