--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -18,8 +18,8 @@ maitake = { git = "https://github.com/hawkw/mycelium.git", rev = "09c84f4e8171f6
 rand_xoshiro = "0.6"
 rand = { version = "0.8", default-features = false }
 i8042 = { path = "../crates/i8042" }
-pci-ids = "0.2"
-pci_types = { path = "../../pci_types", version = "0.2" }
+# pci-ids = "0.2"
+pci_types = "0.3"
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 x86_64 = "0.14"
