--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [build-dependencies]
-bootloader = { git = "https://github.com/rust-osdev/bootloader" }
+bootloader = { git = "https://github.com/devsnek/bootloader.git", rev = "78fb1e58cb9e06548de20abeabfd11ebd75f2865" }
 snek_kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
 
 [dependencies]
