--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,8 @@
-[package]
-name = "snek_os"
-version = "0.1.0"
-edition = "2021"
-
-[build-dependencies]
-bootloader = { git = "https://github.com/devsnek/bootloader.git", rev = "a65533a4deb86afe13f4dcc79209b344fee34f4f" }
-
-[dependencies]
-ovmf-prebuilt = "0.1.0-alpha.1"
-
 [workspace]
+resolver = "2"
 members = [
   "kernel",
   "crates/i8042",
   "crates/snalloc",
+  "crates/e9",
 ]
