--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -22,6 +22,7 @@ rustc-demangle = "0.1"
 snalloc = { path = "../crates/snalloc" }
 limine = "0.1"
 e9 = { path = "../crates/e9" }
+embedded-graphics = "0.8"
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 x86_64 = "0.14"
@@ -30,7 +31,7 @@ acpi = { git = "https://github.com/rust-osdev/acpi.git", rev = "e41036d3749a5a90
 os_units = "0.4"
 x2apic = "0.4"
 raw-cpuid = "10.6"
-elf = { version = "0.7", default-features = false }
+xmas-elf = "0.9"
 
 [build-dependencies]
 image = { version = "0.24", default-features = false, features = ["png"] }
