--- a/crates/e9/Cargo.toml
+++ b/crates/e9/Cargo.toml
@@ -3,6 +3,9 @@ name = "e9"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+tracing = { version = "0.1", default-features = false, optional = true }
+tracing-subscriber = { version = "0.3", default-features = false, optional = true }
+
+[features]
+tracing = ["dep:tracing", "dep:tracing-subscriber"]
