--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -21,8 +21,12 @@ pci_types = "0.3"
 rustc-demangle = "0.1"
 snalloc = { path = "../crates/snalloc" }
 limine = "0.1"
-e9 = { path = "../crates/e9" }
+e9 = { path = "../crates/e9", features = ["tracing"] }
 embedded-graphics = "0.8"
+unwinding = { version = "0.2", default-features = false, features = ["unwinder", "fde-static", "personality", "panic", "dwarf-expr"] }
+tracing = { version = "0.1", default-features = false }
+tracing-subscriber = { version = "0.3", default-features = false }
+pin-project = "1.1"
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 x86_64 = "0.14"
