--- a/crates/e9/Cargo.toml
+++ b/crates/e9/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 tracing = { version = "0.1", default-features = false, optional = true }
 tracing-subscriber = { version = "0.3", default-features = false, optional = true }
+spin = { version = "0.9", optional = true }
 
 [features]
-tracing = ["dep:tracing", "dep:tracing-subscriber"]
+tracing = ["dep:tracing", "dep:tracing-subscriber", "dep:spin"]
