--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -23,15 +23,15 @@ snalloc = { path = "../crates/snalloc" }
 limine = "0.1"
 e9 = { path = "../crates/e9" }
 embedded-graphics = "0.8"
-unwinding = { version = "0.2", default-features = false, features = ["unwinder", "fde-static", "personality", "panic", "dwarf-expr"] }
+unwinding = { version = "0.2", default-features = false, features = ["unwinder", "fde-static", "personality", "panic", "dwarf-expr", "hide-trace"] }
 pin-project = "1.1"
 bitflags = "2.4"
+lai = { git = "https://github.com/devsnek/lai-rs.git", rev = "6cd30f07d3c7fd9c812b592175562d0a40919669" }
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 x86_64 = "0.14"
 pic8259 = "0.10"
-acpi = { git = "https://github.com/rust-osdev/acpi.git", rev = "e41036d3749a5a901e62cdf62011c735bf283e9c" }
-aml = "0.16"
+acpi = { git = "https://github.com/devsnek/acpi.git", rev = "4d8317aca9b484e83e545e5db30907c40ab22964" }
 os_units = "0.4"
 x2apic = "0.4"
 raw-cpuid = "10.6"
