--- a/kernel/limine.cfg
+++ b/kernel/limine.cfg
@@ -1,16 +1,4 @@
-# The entry name that will be displayed in the boot menu.
 :snek_os (KASLR on)
-    # We use the Limine boot protocol.
     PROTOCOL=limine
-
-    # Path to the kernel to boot. boot:/// represents the partition on which limine.cfg is located.
     KERNEL_PATH=boot:///kernel.elf
-
-# Same thing, but without KASLR.
-:snek_os (KASLR off)
-    PROTOCOL=limine
-
-    # Disable KASLR (it is enabled by default for relocatable kernels)
-    KASLR=no
-
-    KERNEL_PATH=boot:///kernel.elf
+    TIMEOUT=0
